--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -5,9 +5,10 @@
       [opened]="!(isHandset$ | async)">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/first-page">First Page</a>
-      <a mat-list-item routerLink="/second-page">Second Page</a>
-      <a mat-list-item routerLink="/third-page">Third Page</a>
+      <a mat-list-item routerLink="/dashboard">Tableau de bord</a>
+      <a mat-list-item routerLink="/new-form">Nouveau formulaire</a>
+      <a mat-list-item routerLink="/parameters">Paramètres</a>
+      <a mat-list-item routerLink="/archive">Archive</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -20,7 +21,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>projet4</span>
+      <span>Poly Forms</span>
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
