--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,4 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.mat-toolbar.mat-primary {background: #222222; color: #fff;}
