--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,6 @@
-  <mat-toolbar color="primary">
-      <span>Poly Forms</span>
-    </mat-toolbar>
-    <router-outlet></router-outlet>
+  <mat-toolbar color="primary"><span>Poly Forms</span></mat-toolbar>
+  <mat-toolbar id="secondaryToolbar" color="primary"></mat-toolbar>
+  <router-outlet></router-outlet>
 <!--<mat-nav-list>-->
 <!--<a mat-list-item routerLink="/dashboard">Tableau de bord</a>-->
 <!--<a mat-list-item routerLink="/new-form">Nouveau formulaire</a>-->
