--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,6 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-toolbar.mat-primary {background: #222222; color: #fff;}
+#secondaryToolbar{
+  background: #F7F6F6; color: #fff;
+}
