--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,7 @@
-  <mat-toolbar color="primary"><span>Poly Forms</span></mat-toolbar>
-  <mat-toolbar id="secondaryToolbar" color="primary"></mat-toolbar>
-  <router-outlet></router-outlet>
+<mat-toolbar color="primary"><span><img src="assets/img/logo-poly.PNG"></span></mat-toolbar>
+<mat-toolbar id="secondaryToolbar" color="primary"></mat-toolbar>
+<mat-toolbar id="searchToolbar" color="primary"><span><mat-icon>search</mat-icon></span></mat-toolbar>
+<router-outlet></router-outlet>
 <!--<mat-nav-list>-->
 <!--<a mat-list-item routerLink="/dashboard">Tableau de bord</a>-->
 <!--<a mat-list-item routerLink="/new-form">Nouveau formulaire</a>-->
