Moves search toolbar to dashboard comp.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<mat-toolbar id="searchToolbar" color="primary"><span><mat-icon>search</mat-icon></span></mat-toolbar>
 <div class="grid-container">
   <mat-grid-list cols="2" rowHeight="350px">
     <mat-grid-tile *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows">
