First draft inputs sections 3 à 7.

--- a/src/app/formulaires/demande-achat/demande-achat.component.html
+++ b/src/app/formulaires/demande-achat/demande-achat.component.html
@@ -17,6 +17,7 @@
       <mat-checkbox>Standard</mat-checkbox>
       <mat-checkbox>Entente</mat-checkbox>
     </mat-grid-tile>
+    <!--Demandeur-->
     <mat-grid-tile>
       <mat-form-field>
         <input matInput placeholder="Nom du demandeur">
@@ -28,7 +29,7 @@
         <input matInput placeholder="Téléphone">
       </mat-form-field>
     </mat-grid-tile>
-
+    <!--Fournisseur suggéré-->
     <mat-grid-tile>
       <mat-form-field>
         <input matInput placeholder="Nom">
@@ -54,6 +55,85 @@
       <mat-form-field>
         <input matInput placeholder="Pays">
       </mat-form-field>
+    </mat-grid-tile>
+    <!--Contact-->
+    <mat-grid-tile>
+      <mat-form-field>
+        <input matInput placeholder="Nom">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Courriel">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Tél.">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Fax">
+      </mat-form-field>
+    </mat-grid-tile>
+    <!--Soumission-->
+    <mat-grid-tile>
+      <span>SOUMISSION:</span>
+      <span>NO:</span>
+      <mat-form-field>
+        <input matInput placeholder="No">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Échéance">
+      </mat-form-field>
+    </mat-grid-tile>
+    <!--Livraison-->
+  <mat-grid-tile>
+    <span>LIVRAISON:</span>
+    <span>DATE CONVENUE:</span>
+    <mat-form-field>
+      <input matInput placeholder="Date convenue">
+    </mat-form-field>
+    <span>LIEU CONVENU:</span>
+    <mat-form-field>
+      <input matInput placeholder="Lieu convenu">
+    </mat-form-field>
+    <span>INCOTERMS:</span>
+    <mat-form-field>
+      <input matInput placeholder="Incoterms">
+    </mat-form-field>
+  </mat-grid-tile>
+    <!--Termes de paiement-->
+    <mat-grid-tile>
+    <span>TERMES DE PAIEMENT: </span>
+    <span>CONDITIONS </span>
+    <mat-form-field>
+      <input matInput placeholder="Incoterms">
+    </mat-form-field>
+    <span>MOYENS </span>
+    <mat-form-field>
+      <input matInput placeholder="Incoterms">
+    </mat-form-field>
+    <span>PRÉCISIONS </span>
+    <mat-form-field>
+      <input matInput placeholder="Incoterms">
+    </mat-form-field>
+    </mat-grid-tile>
+    <!--Termes de paiement-->
+  <mat-grid-tile>
+    <span>1</span>
+    <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
+  </mat-grid-tile>
+    <mat-grid-tile>
+    <span>2</span>
+    <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
+    </mat-grid-tile>
+    <mat-grid-tile>
+    <span>3</span>
+    <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
+    </mat-grid-tile>
+    <mat-grid-tile>
+    <span>4</span>
+    <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
+    </mat-grid-tile>
+    <mat-grid-tile>
+    <span>5</span>
+    <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
     </mat-grid-tile>
   </mat-grid-list>
 </form>
