--- a/src/app/form/app.af-form.css
+++ b/src/app/form/app.af-form.css
@@ -1,13 +1,39 @@
   div {
     display: flex;
+  }
+  div.section {
     flex-direction: column;
+    align-content: flex-start;
+    justify-content: flex-start;
+    background-color: #c5d4ff;
+    border: 2px solid #000000;
+    padding: 5px;
+    font-size: 13px;
+    margin-bottom: 5px;
+  }
+
+  div.fieldgroup {
+    flex-direction: row;
+    align-content: flex-start;
+    justify-content: flex-start;
+  }
+
+  h6 {
+      padding: 0;
+      margin: 0;
+      font-size: 0.9em;
+  }
+  p {
+      padding: 0;
+      margin: 0;
   }
   
   mat-form-field {
-    margin: 3em;
+    margin: 1em;
     width: 100%;
+    height: 100%;
   }
 
   .enabled {
-      background-color: #ae3503;
+      background-color: #ae3803;
   }
