Ajout draft 3 dernières sections.

--- a/src/app/formulaires/demande-achat/demande-achat.component.html
+++ b/src/app/formulaires/demande-achat/demande-achat.component.html
@@ -150,7 +150,7 @@
   <mat-grid-tile>
     <span>1</span>
     <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
-  </mat-grid-tile>
+    </mat-grid-tile>
     <mat-grid-tile>
     <span>2</span>
     <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
@@ -167,6 +167,86 @@
     <span>5</span>
     <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
     </mat-grid-tile>
+      <mat-grid-tile>
+        <span>6</span>
+        <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <span>7</span>
+        <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <span>8</span>
+        <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <span>9</span>
+        <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <span>10</span>
+        <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
+      </mat-grid-tile>
+    </mat-grid-list>
+  </div>
+  <div class="demandeur">
+    <h6>Ventilation budgétaire</h6>
+    <mat-grid-list cols="1" rowHeight="4em">
+      <mat-grid-tile>
+        <span>TERMES DE PAIEMENT: </span>
+        <span>CONDITIONS </span>
+        <mat-form-field>
+          <input matInput placeholder="Incoterms">
+        </mat-form-field>
+        <span>MOYENS </span>
+        <mat-form-field>
+          <input matInput placeholder="Incoterms">
+        </mat-form-field>
+        <span>PRÉCISIONS </span>
+        <mat-form-field>
+          <input matInput placeholder="Incoterms">
+        </mat-form-field>
+      </mat-grid-tile>
+    </mat-grid-list>
+  </div>
+  <div class="demandeur">
+    <h6>Commentaires et précisions</h6>
+    <mat-grid-list cols="1" rowHeight="4em">
+      <mat-grid-tile>
+        <span>TERMES DE PAIEMENT: </span>
+        <span>CONDITIONS </span>
+        <mat-form-field>
+          <input matInput placeholder="Incoterms">
+        </mat-form-field>
+        <span>MOYENS </span>
+        <mat-form-field>
+          <input matInput placeholder="Incoterms">
+        </mat-form-field>
+        <span>PRÉCISIONS </span>
+        <mat-form-field>
+          <input matInput placeholder="Incoterms">
+        </mat-form-field>
+      </mat-grid-tile>
+    </mat-grid-list>
+  </div>
+  <div class="demandeur">
+    <h6>Demandeur</h6>
+    <mat-grid-list cols="1" rowHeight="4em">
+      <mat-grid-tile>
+        <span>TERMES DE PAIEMENT: </span>
+        <span>CONDITIONS </span>
+        <mat-form-field>
+          <input matInput placeholder="Incoterms">
+        </mat-form-field>
+        <span>MOYENS </span>
+        <mat-form-field>
+          <input matInput placeholder="Incoterms">
+        </mat-form-field>
+        <span>PRÉCISIONS </span>
+        <mat-form-field>
+          <input matInput placeholder="Incoterms">
+        </mat-form-field>
+      </mat-grid-tile>
     </mat-grid-list>
   </div>
 </form>
