--- a/src/app/formulaires/demande-achat/demande-achat.component.html
+++ b/src/app/formulaires/demande-achat/demande-achat.component.html
@@ -16,13 +16,13 @@
       <mat-checkbox>Standard</mat-checkbox>
       <mat-checkbox>Entente</mat-checkbox>
     </mat-grid-tile>
-    <!--Demandeur-->
-    <div class="demandeur">
-      <h6>Demandeur</h6>
+    <!--section-rectangle-->
+    <div class="section-rectangle">
+      <h6>section-rectangle</h6>
       <mat-grid-list cols="1" rowHeight="4em">
         <mat-grid-tile>
           <mat-form-field>
-            <input matInput placeholder="Nom du demandeur">
+            <input matInput placeholder="Nom du section-rectangle">
           </mat-form-field>
           <mat-form-field>
             <input matInput placeholder="Département">
@@ -34,8 +34,8 @@
       </mat-grid-list>
     </div>
     <!--Fournisseur suggéré-->
-    <div class="demandeur">
-      <h6>Fournisseur suggéré</h6>
+    <div class="section-rectangle">
+      <h6>FOURNISSEUR SUGGÉRÉ</h6>
       <mat-grid-list cols="1" rowHeight="4em">
       <mat-grid-tile>
         <mat-form-field>
@@ -66,8 +66,8 @@
     </mat-grid-list>
     </div>
     <!--Contact-->
-    <div class="demandeur">
-      <h6>Contact</h6>
+    <div class="section-rectangle">
+      <h6>CONTACT</h6>
       <mat-grid-list cols="1" rowHeight="4em">
     <mat-grid-tile>
       <mat-form-field>
@@ -86,8 +86,8 @@
     </mat-grid-list>
     </div>
     <!--Soumission-->
-    <div class="demandeur">
-      <h6>Soumission</h6>
+    <div class="section-rectangle">
+      <h6>SOUMISSION</h6>
       <mat-grid-list cols="1" rowHeight="4em">
     <mat-grid-tile>
       <span>SOUMISSION:</span>
@@ -102,8 +102,8 @@
     </mat-grid-list>
     </div>
     <!--Livraison-->
-  <div class="demandeur">
-    <h6>Livraison</h6>
+  <div class="section-rectangle">
+    <h6>LIVRAISON</h6>
     <mat-grid-list cols="1" rowHeight="4em">
   <mat-grid-tile>
     <span>LIVRAISON:</span>
@@ -123,129 +123,123 @@
     </mat-grid-list>
   </div>
     <!--Termes de paiement-->
-  <div class="demandeur">
-      <h6>Termes de paiement</h6>
+  <div class="section-rectangle">
+      <h6>TERMES DE PAIEMENT</h6>
     <mat-grid-list cols="1" rowHeight="4em">
     <mat-grid-tile>
     <span>TERMES DE PAIEMENT: </span>
     <span>CONDITIONS </span>
     <mat-form-field>
-      <input matInput placeholder="Incoterms">
+      <input matInput placeholder="Conditions">
     </mat-form-field>
     <span>MOYENS </span>
     <mat-form-field>
-      <input matInput placeholder="Incoterms">
+      <input matInput placeholder="Moyens">
     </mat-form-field>
     <span>PRÉCISIONS </span>
     <mat-form-field>
-      <input matInput placeholder="Incoterms">
+      <input matInput placeholder="Précisions">
     </mat-form-field>
     </mat-grid-tile>
     </mat-grid-list>
   </div>
     <!--Description des items-->
-  <div class="demandeur">
-    <h6>Description des items</h6>
+  <div class="section-rectangle">
+    <h6>DESCRIPTION DES ITEMS</h6>
     <mat-grid-list cols="1" rowHeight="4em">
   <mat-grid-tile>
     <span>1</span>
-    <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
-    </mat-grid-tile>
-    <mat-grid-tile>
-    <span>2</span>
-    <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
-    </mat-grid-tile>
-    <mat-grid-tile>
-    <span>3</span>
-    <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
-    </mat-grid-tile>
-    <mat-grid-tile>
-    <span>4</span>
-    <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
-    </mat-grid-tile>
-    <mat-grid-tile>
-    <span>5</span>
-    <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
-    </mat-grid-tile>
+    <mat-form-field><input matInput placeholder="Numéro de référence"></mat-form-field><mat-form-field><input matInput placeholder="DESCRIPTION"></mat-form-field><mat-form-field><input matInput placeholder="QUANTITÉ"></mat-form-field><mat-form-field><input matInput placeholder="PRIX UNITAIRE"></mat-form-field><mat-form-field><input matInput placeholder="TOTAL"></mat-form-field>
+  </mat-grid-tile>
+      <mat-grid-tile>
+        <span>2</span>
+        <mat-form-field><input matInput placeholder="Numéro de référence"></mat-form-field><mat-form-field><input matInput placeholder="DESCRIPTION"></mat-form-field><mat-form-field><input matInput placeholder="QUANTITÉ"></mat-form-field><mat-form-field><input matInput placeholder="PRIX UNITAIRE"></mat-form-field><mat-form-field><input matInput placeholder="TOTAL"></mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <span>3</span>
+        <mat-form-field><input matInput placeholder="Numéro de référence"></mat-form-field><mat-form-field><input matInput placeholder="DESCRIPTION"></mat-form-field><mat-form-field><input matInput placeholder="QUANTITÉ"></mat-form-field><mat-form-field><input matInput placeholder="PRIX UNITAIRE"></mat-form-field><mat-form-field><input matInput placeholder="TOTAL"></mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <span>4</span>
+        <mat-form-field><input matInput placeholder="Numéro de référence"></mat-form-field><mat-form-field><input matInput placeholder="DESCRIPTION"></mat-form-field><mat-form-field><input matInput placeholder="QUANTITÉ"></mat-form-field><mat-form-field><input matInput placeholder="PRIX UNITAIRE"></mat-form-field><mat-form-field><input matInput placeholder="TOTAL"></mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <span>5</span>
+        <mat-form-field><input matInput placeholder="Numéro de référence"></mat-form-field><mat-form-field><input matInput placeholder="DESCRIPTION"></mat-form-field><mat-form-field><input matInput placeholder="QUANTITÉ"></mat-form-field><mat-form-field><input matInput placeholder="PRIX UNITAIRE"></mat-form-field><mat-form-field><input matInput placeholder="TOTAL"></mat-form-field>
+      </mat-grid-tile>
       <mat-grid-tile>
         <span>6</span>
-        <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
+        <mat-form-field><input matInput placeholder="Numéro de référence"></mat-form-field><mat-form-field><input matInput placeholder="DESCRIPTION"></mat-form-field><mat-form-field><input matInput placeholder="QUANTITÉ"></mat-form-field><mat-form-field><input matInput placeholder="PRIX UNITAIRE"></mat-form-field><mat-form-field><input matInput placeholder="TOTAL"></mat-form-field>
       </mat-grid-tile>
       <mat-grid-tile>
         <span>7</span>
-        <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
+        <mat-form-field><input matInput placeholder="Numéro de référence"></mat-form-field><mat-form-field><input matInput placeholder="DESCRIPTION"></mat-form-field><mat-form-field><input matInput placeholder="QUANTITÉ"></mat-form-field><mat-form-field><input matInput placeholder="PRIX UNITAIRE"></mat-form-field><mat-form-field><input matInput placeholder="TOTAL"></mat-form-field>
       </mat-grid-tile>
       <mat-grid-tile>
         <span>8</span>
-        <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
+        <mat-form-field><input matInput placeholder="Numéro de référence"></mat-form-field><mat-form-field><input matInput placeholder="DESCRIPTION"></mat-form-field><mat-form-field><input matInput placeholder="QUANTITÉ"></mat-form-field><mat-form-field><input matInput placeholder="PRIX UNITAIRE"></mat-form-field><mat-form-field><input matInput placeholder="TOTAL"></mat-form-field>
       </mat-grid-tile>
       <mat-grid-tile>
         <span>9</span>
-        <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
+        <mat-form-field><input matInput placeholder="Numéro de référence"></mat-form-field><mat-form-field><input matInput placeholder="DESCRIPTION"></mat-form-field><mat-form-field><input matInput placeholder="QUANTITÉ"></mat-form-field><mat-form-field><input matInput placeholder="PRIX UNITAIRE"></mat-form-field><mat-form-field><input matInput placeholder="TOTAL"></mat-form-field>
       </mat-grid-tile>
       <mat-grid-tile>
         <span>10</span>
-        <mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field><mat-form-field><input matInput placeholder="Incoterms"></mat-form-field>
+        <mat-form-field><input matInput placeholder="Numéro de référence"></mat-form-field><mat-form-field><input matInput placeholder="DESCRIPTION"></mat-form-field><mat-form-field><input matInput placeholder="QUANTITÉ"></mat-form-field><mat-form-field><input matInput placeholder="PRIX UNITAIRE"></mat-form-field><mat-form-field><input matInput placeholder="TOTAL"></mat-form-field>
       </mat-grid-tile>
     </mat-grid-list>
   </div>
-  <div class="demandeur">
-    <h6>Ventilation budgétaire</h6>
+  <div class="section-rectangle">
+    <h6>VENTILATION BUDGÉTAIRE</h6>
     <mat-grid-list cols="1" rowHeight="4em">
       <mat-grid-tile>
-        <span>TERMES DE PAIEMENT: </span>
-        <span>CONDITIONS </span>
-        <mat-form-field>
-          <input matInput placeholder="Incoterms">
-        </mat-form-field>
-        <span>MOYENS </span>
-        <mat-form-field>
-          <input matInput placeholder="Incoterms">
-        </mat-form-field>
-        <span>PRÉCISIONS </span>
-        <mat-form-field>
-          <input matInput placeholder="Incoterms">
-        </mat-form-field>
+        <span>1</span>
+        <mat-form-field><input matInput placeholder="UBR"></mat-form-field><mat-form-field><input matInput placeholder="COMPTE"></mat-form-field><mat-form-field><input matInput placeholder="UNITÉ ADM."></mat-form-field><mat-form-field><input matInput placeholder="%"></mat-form-field><mat-form-field><input matInput placeholder="MONTANT (AVEC TAXES)"></mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <span>2</span>
+        <mat-form-field><input matInput placeholder="UBR"></mat-form-field><mat-form-field><input matInput placeholder="COMPTE"></mat-form-field><mat-form-field><input matInput placeholder="UNITÉ ADM."></mat-form-field><mat-form-field><input matInput placeholder="%"></mat-form-field><mat-form-field><input matInput placeholder="MONTANT (AVEC TAXES)"></mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <span>3</span>
+        <mat-form-field><input matInput placeholder="UBR"></mat-form-field><mat-form-field><input matInput placeholder="COMPTE"></mat-form-field><mat-form-field><input matInput placeholder="UNITÉ ADM."></mat-form-field><mat-form-field><input matInput placeholder="%"></mat-form-field><mat-form-field><input matInput placeholder="MONTANT (AVEC TAXES)"></mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <span>4</span>
+        <mat-form-field><input matInput placeholder="UBR"></mat-form-field><mat-form-field><input matInput placeholder="COMPTE"></mat-form-field><mat-form-field><input matInput placeholder="UNITÉ ADM."></mat-form-field><mat-form-field><input matInput placeholder="%"></mat-form-field><mat-form-field><input matInput placeholder="MONTANT (AVEC TAXES)"></mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <span>5</span>
+        <mat-form-field><input matInput placeholder="UBR"></mat-form-field><mat-form-field><input matInput placeholder="COMPTE"></mat-form-field><mat-form-field><input matInput placeholder="UNITÉ ADM."></mat-form-field><mat-form-field><input matInput placeholder="%"></mat-form-field><mat-form-field><input matInput placeholder="MONTANT (AVEC TAXES)"></mat-form-field>
       </mat-grid-tile>
     </mat-grid-list>
   </div>
-  <div class="demandeur">
-    <h6>Commentaires et précisions</h6>
+  <div class="section-rectangle">
+    <h6>COMMENTAIRES ET PRÉCISIONS</h6>
     <mat-grid-list cols="1" rowHeight="4em">
       <mat-grid-tile>
-        <span>TERMES DE PAIEMENT: </span>
-        <span>CONDITIONS </span>
         <mat-form-field>
-          <input matInput placeholder="Incoterms">
-        </mat-form-field>
-        <span>MOYENS </span>
-        <mat-form-field>
-          <input matInput placeholder="Incoterms">
-        </mat-form-field>
-        <span>PRÉCISIONS </span>
-        <mat-form-field>
-          <input matInput placeholder="Incoterms">
+          <input matInput>
         </mat-form-field>
       </mat-grid-tile>
     </mat-grid-list>
   </div>
-  <div class="demandeur">
-    <h6>Demandeur</h6>
+  <div id="section-rectangle">
     <mat-grid-list cols="1" rowHeight="4em">
       <mat-grid-tile>
-        <span>TERMES DE PAIEMENT: </span>
-        <span>CONDITIONS </span>
-        <mat-form-field>
-          <input matInput placeholder="Incoterms">
-        </mat-form-field>
-        <span>MOYENS </span>
-        <mat-form-field>
-          <input matInput placeholder="Incoterms">
-        </mat-form-field>
-        <span>PRÉCISIONS </span>
-        <mat-form-field>
-          <input matInput placeholder="Incoterms">
-        </mat-form-field>
+          <mat-form-field>
+            <input matInput type="text" placeholder="SIGNATURE DU DEMANDEUR">
+          </mat-form-field>
+          <button mat-raised-button>SIGNER</button>
+          <br>
+          <mat-checkbox
+            class="example-margin"
+            [(ngModel)]="checked"
+            [(indeterminate)]="indeterminate"
+            [labelPosition]="labelPosition"
+            [disabled]="disabled">
+            Je confirme et j'accepte la véracité des informations ci-dessus.
+          </mat-checkbox>
       </mat-grid-tile>
     </mat-grid-list>
   </div>
