--- a/src/app/formulaires/demande-achat/demande-achat.component.html
+++ b/src/app/formulaires/demande-achat/demande-achat.component.html
@@ -18,7 +18,7 @@
     </mat-grid-tile>
     <!--section-rectangle-->
     <div class="section-rectangle">
-      <h6>section-rectangle</h6>
+      <h6>DEMANDEUR</h6>
       <mat-grid-list cols="1" rowHeight="4em">
         <mat-grid-tile>
           <mat-form-field>
@@ -224,7 +224,7 @@
       </mat-grid-tile>
     </mat-grid-list>
   </div>
-  <div id="section-rectangle">
+  <div class="section-rectangle">
     <mat-grid-list cols="1" rowHeight="4em">
       <mat-grid-tile>
           <mat-form-field>
@@ -232,16 +232,44 @@
           </mat-form-field>
           <button mat-raised-button>SIGNER</button>
           <br>
-          <mat-checkbox
-            class="example-margin"
-            [(ngModel)]="checked"
-            [(indeterminate)]="indeterminate"
-            [labelPosition]="labelPosition"
-            [disabled]="disabled">
+          <mat-checkbox class="example-margin">
             Je confirme et j'accepte la véracité des informations ci-dessus.
           </mat-checkbox>
       </mat-grid-tile>
+      <mat-grid-tile>
+        <mat-form-field>
+          <input matInput type="text" placeholder="SIGNATURE DU DEMANDEUR">
+        </mat-form-field>
+        <button mat-raised-button>SIGNER</button>
+        <br>
+        <mat-checkbox class="example-margin">
+          Je confirme et j'accepte la véracité des informations ci-dessus.
+        </mat-checkbox>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <mat-form-field>
+          <input matInput type="text" placeholder="SIGNATURE DU DEMANDEUR">
+        </mat-form-field>
+        <button mat-raised-button>SIGNER</button>
+        <br>
+        <mat-checkbox class="example-margin">
+          Je confirme et j'accepte la véracité des informations ci-dessus.
+        </mat-checkbox>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <mat-form-field>
+          <input matInput type="text" placeholder="SIGNATURE DU DEMANDEUR">
+        </mat-form-field>
+        <button mat-raised-button>SIGNER</button>
+        <br>
+        <mat-checkbox class="example-margin">
+          Je confirme et j'accepte la véracité des informations ci-dessus.
+        </mat-checkbox>
+      </mat-grid-tile>
     </mat-grid-list>
+    </div>
+  <div class="section-rectangle">
+    <input type="file" multiple>
   </div>
 </form>
 
