--- a/src/app/templates/paymentForm.component.css
+++ b/src/app/templates/paymentForm.component.css
@@ -3,7 +3,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-end;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    padding: 5px;
 }
 
 #entite-externe, 
@@ -12,43 +13,162 @@
 #nouveau-fournisseur, 
 #description-facture,
 #ventilation-budgetaire,
-#signatures,
-#references
-{
+#references {
     border: 2px solid black;
-    padding-top: 5px;
-    padding-left: 5px;
     margin: 5px;
+}
+
+#signatures {
+    margin: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1 1 2;
+    justify-content: space-between;
 }
 
 h6 {
     margin:0;
-    padding-bottom: 5px;
+    padding: 2px 5px;
     font-size: 0.9em;
-    max-width: max-content;
+    background-color: #CCD4DF;
 }
 
 div {
     font-size: 13px;
 }
 
-#entite-externe mat-grid-list mat-form-field {
-    margin: 1em;
-    width: 100%;
-    height: 100%;
-}
-
-#description-facture, #ventilation-budgetaire {
-    width: max-content;
-}
-
-#signature-demandeur {
+.signature {
     border: 2px solid black;
-    width: max-content;
     margin-bottom: 5px;
     padding: 5px 10px;
+    text-align: center;
+    width: 480px;
 }
 
-#signature-demandeur button {
-    margin-left: 60px;
+.signature mat-form-field {
+    width: 100%;
+}
+
+#entite-externe {
+    width: max-content;
+}
+
+mat-form-field {
+    padding: 0px 5px;
+}
+
+#entite-externe mat-form-field {
+    width: 150px;
+}
+
+#entite-externe mat-form-field:last-child {
+    width: 90px;
+    margin: 0px 20px;
+}
+
+#beneficiaire-demandeur {
+    display: flex;
+}
+
+#beneficiaire-demandeur > div {
+    flex: 1 1;
+}
+
+#beneficiaire mat-form-field {
+    width: 90%;
+}
+
+#demandeur mat-form-field {
+    width: 45%;
+}
+
+#nouveau-fournisseur mat-form-field:first-of-type {
+    width: 30%;
+    margin-right: 30%;
+}
+
+#nouveau-fournisseur mat-form-field:last-child {
+    width: 10%; 
+}
+
+#form-date {
+    background-color: #CCD4DF;
+}
+
+#description-facture th,
+#ventilation-budgetaire tr:first-child th {
+    padding: 10px 0px 0px 5px;
+}
+
+#ventilation-budgetaire tr:nth-child(2) th {
+    vertical-align: bottom;
+}
+
+#ventilation-budgetaire tbody td:nth-child(4),
+#ventilation-budgetaire tbody td:nth-child(5),
+#ventilation-budgetaire thead,
+#description-facture thead {
+    background-color: #CCD4DF;
+}
+
+#description-facture 
+tr td:first-child {
+    width: 20%;
+}
+
+#description-facture tr td:nth-of-type(2) mat-form-field {
+    width: 100%;
+}
+
+#description-facture 
+tr td:nth-of-type(2) {
+    width: 40%;
+}
+
+#description-facture 
+tr td:nth-of-type(3){
+    width: 10%;
+}
+
+#description-facture 
+tr td:last-child {
+    width: 10%;
+}
+
+#description-facture {
+    text-align: center;
+}
+
+input {
+    text-align: center;
+}
+
+#ventilation-budgetaire table {
+    /* TODO: change layout (print to pdf) */
+    table-layout: fixed;
+    text-align: center;
+    border-collapse: collapse;
+}
+
+#ventilation-budgetaire table thead {
+    border-bottom: 2px solid white;
+}
+
+#ventilation-budgetaire table mat-form-field{
+    width: 90%;
+}
+
+#references {
+    padding: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#references strong:nth-of-type(2) {
+    margin: 5px;
+}
+
+#references div {
+    background-color: #CCD4DF;
 }
