--- a/src/app/templates/paymentForm.component.html
+++ b/src/app/templates/paymentForm.component.html
@@ -15,21 +15,17 @@
     <mat-form-field>
         <input matInput type="text" placeholder="EMPLOYÉ (matricule)">
     </mat-form-field>
-    <mat-grid-list cols="2" rowHeight="4em">
-        <mat-grid-tile>
-            <mat-form-field>
-                <input matInput type="text" placeholder="FOURNISSEUR (numéro)">
-            </mat-form-field>
-        </mat-grid-tile>
-        <mat-grid-tile>
-            <mat-form-field>
-                <input matInput type="text" placeholder="Code adresse">
-            </mat-form-field> 
-        </mat-grid-tile>
-    </mat-grid-list>
+    <br>
+    <mat-form-field>
+        <input matInput type="text" placeholder="FOURNISSEUR (numéro)">
+    </mat-form-field>
+
+    <mat-form-field>
+        <input matInput type="text" placeholder="Code adresse">
+    </mat-form-field> 
 </div>
 
-<div>
+<div id="beneficiaire-demandeur">
     <div id="beneficiaire">
         <h6>BÉNÉFICIAIRE</h6>
         <mat-form-field>
@@ -40,6 +36,9 @@
         <h6>DEMANDEUR</h6>
         <mat-form-field>
             <input matInput type="text" placeholder="NOM DU DEMANDEUR">
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput type="text" placeholder="TÉLÉPHONE">
         </mat-form-field>
     </div>
 </div>
@@ -57,7 +56,7 @@
     <mat-form-field>
         <input matInput type="text" placeholder="FAX">
     </mat-form-field>
-
+    <br>
     <mat-form-field>
         <input matInput type="text" placeholder="VILLE">
     </mat-form-field>
@@ -70,13 +69,14 @@
         <input matInput type="text" placeholder="CODE POSTAL">
     </mat-form-field>
 </div>
+
 <div id="description-facture">
     <h6>DESCRIPTION DE LA FACTURE</h6>
-    <table>
+    <table width="100%">
         <thead>
             <th>Numéro de la facture <br> (numéro de référence)</th>
             <th>DESCRIPTION DE LA DÉPENSE</th>
-            <th>Réf. (1)</th>
+            <th>Réf. <a href="#ref">(1)</a></th>
             <th>TOTAL DE LA FACTURE <br> (en devise)</th>
         </thead>
         <tbody>
@@ -303,19 +303,25 @@
         </tbody>
     </table>
 </div>
+
 <div id="ventilation-budgetaire">
     <h6>VENTILATION BUDGÉTAIRE</h6>
-    <table>
+    <table width="100%">
         <thead>
-            <th>UBR</th>
-            <th>COMPTE</th>
-            <th>UNITÉ <br> ADM.</th>
-
-            <th>Code de taxes</th>
-            <th>T4A</th>
-
-            <th>RÉFÉRENCES</th>
-            <th>MONTANT APRÈS <br> TAXE (en devise)</th>
+            <tr>
+                <th colspan="3"></th>
+                <th colspan="2">RÉSERVÉ AU SERVICE DES FINANCES</th>
+                <th colspan="2"></th>
+            </tr>
+            <tr>
+                <th>UBR</th>
+                <th>COMPTE</th>
+                <th>UNITÉ <br> ADM.</th>
+                <th>Code de taxes</th>
+                <th>T4A</th>
+                <th>RÉFÉRENCES</th>
+                <th>MONTANT APRÈS <br> TAXE (en devise)</th>
+            </tr>
         </thead>
         <tbody>
             <tr>
@@ -555,13 +561,13 @@
         </tbody>
     </table>
 </div>
+
 <div id="signatures">
-    <div id="signature-demandeur">
+    <div id="signature-demandeur" class="signature">
         <mat-form-field>
             <input matInput type="text" placeholder="SIGNATURE DU DEMANDEUR">
         </mat-form-field>
-        <button mat-raised-button>SIGNER</button>
-        <br>
+        
         <mat-checkbox
           class="example-margin"
           [(ngModel)]="checked"
@@ -570,10 +576,68 @@
           [disabled]="disabled">
           Je confirme et j'accepte la véracité des informations ci-dessus.
         </mat-checkbox>
+        <br>
+        <button mat-raised-button>SIGNER</button>
+    </div>
+    <div id="signature-ubr" class="signature">
+        <mat-form-field>
+            <input matInput type="text" placeholder="SIGNATURE(S) DU OU DES RESPONSABLE(S) DE L'UBR">
+        </mat-form-field>
+        
+        <mat-checkbox
+            class="example-margin"
+            [(ngModel)]="checked"
+            [(indeterminate)]="indeterminate"
+            [labelPosition]="labelPosition"
+            [disabled]="disabled">
+            Je confirme et j'accepte la véracité des informations ci-dessus.
+        </mat-checkbox>
+        <br>
+        <button mat-raised-button>SIGNER</button>
+    </div>
+    <div id="signature-sup" class="signature">
+        <mat-form-field>
+            <input matInput type="text" placeholder="SIGNATURE DU SUPÉRIEUR IMMÉDIAT">
+        </mat-form-field>
+        
+        <mat-checkbox
+            class="example-margin"
+            [(ngModel)]="checked"
+            [(indeterminate)]="indeterminate"
+            [labelPosition]="labelPosition"
+            [disabled]="disabled">
+            Je confirme et j'accepte la véracité des informations ci-dessus.
+        </mat-checkbox>
+        <br>
+        <button mat-raised-button>SIGNER</button>
+    </div>
+    <div id="signature-finance" class="signature">
+        <mat-form-field>
+            <input matInput type="text" placeholder="SERVICE DES FINANCES">
+        </mat-form-field>
+        
+        <mat-checkbox
+            class="example-margin"
+            [(ngModel)]="checked"
+            [(indeterminate)]="indeterminate"
+            [labelPosition]="labelPosition"
+            [disabled]="disabled">
+            Je confirme et j'accepte la véracité des informations ci-dessus.
+        </mat-checkbox>
+        <br>
+        <button mat-raised-button>SIGNER</button>
     </div>
 </div>
 <div id="references">
-    <p>(1) Numéroter les factures et reporter les références à la ligne de ventilation budgétaire appropriée.</p>
-    <p>* Joindre les pièces justificatives</p>
-    <input type="file" multiple>
+    <p>
+        <strong id="ref">(1)</strong> Numéroter les factures et reporter les références à la ligne de ventilation budgétaire appropriée.
+        <br> 
+        <strong>*</strong> Joindre les pièces justificatives
+    </p>
+    <div>
+        <p>Réservé au service des finances</p>
+        <mat-form-field>
+            <input matInput type="text" placeholder="RÉFÉRENCE SAFIRH">
+        </mat-form-field>
+    </div>
 </div>
