ventilation width fix

--- a/src/app/formulaires/voyage-form/voyage-form.component.html
+++ b/src/app/formulaires/voyage-form/voyage-form.component.html
@@ -44,7 +44,7 @@
 </div>
 
 <div id="nouveau-fournisseur">
-  <!--Idk why this is not on the original form <h6>NOUVEAU FOURNISSEUR</h6>--> 
+  <h6>NOUVEAU FOURNISSEUR</h6>
   <mat-form-field>
       <input matInput type="text" placeholder="ADRESSE DE L'EMPLOYÉ ou DU FOURNISSEUR">
   </mat-form-field>
@@ -70,239 +70,85 @@
   </mat-form-field>
 </div>
 
-<div id="endroit du deplacement">
-  <!--
-  <h6>DESCRIPTION DE LA FACTURE</h6>
-  <table width="100%">
-      <thead>
-          <th>Numéro de la facture <br> (numéro de référence)</th>
-          <th>DESCRIPTION DE LA DÉPENSE</th>
-          <th>Réf. <a href="#ref">(1)</a></th>
-          <th>TOTAL DE LA FACTURE <br> (en devise)</th>
-      </thead>
-      <tbody>
-          <tr>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-          </tr>
-          <tr>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-          </tr>
-          <tr>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-          </tr>
-          <tr>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-          </tr>
-          <tr>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-          </tr>
-          <tr>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-          </tr>
-          <tr>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-          </tr>
-          <tr>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-          </tr>
-          <tr>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-          </tr>
-          <tr>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-              <td>
-                  <mat-form-field>
-                      <input matInput type="text">
-                  </mat-form-field>
-              </td>
-          </tr>
-      </tbody>
-  </table>-->
+<div id="endroit-deplacement">
+  <h6>ENDROIT DU DÉPLACEMENT</h6>
+  <mat-form-field>
+      <input matInput type="text" placeholder="ADRESSE DE L'EMPLOYÉ ou DU FOURNISSEUR">
+  </mat-form-field>
+
+  <mat-form-field>
+      <input matInput type="text" placeholder="TÉLÉPHONE">
+  </mat-form-field>
+
+  <mat-form-field>
+      <input matInput type="text" placeholder="FAX">
+  </mat-form-field>
+  <br>
+  <mat-form-field>
+      <input matInput type="text" placeholder="VILLE">
+  </mat-form-field>
+
+  <mat-form-field>
+      <input matInput type="text" placeholder="PROVINCE">
+  </mat-form-field>
+
+  <mat-form-field>
+      <input matInput type="text" placeholder="CODE POSTAL">
+  </mat-form-field>
+</div>
+
+<div id="but-deplacement">
+  <h6>BUT DU DÉPLACEMENT</h6>
+  <mat-form-field>
+      <input matInput type="text" placeholder="ADRESSE DE L'EMPLOYÉ ou DU FOURNISSEUR">
+  </mat-form-field>
+
+  <mat-form-field>
+      <input matInput type="text" placeholder="TÉLÉPHONE">
+  </mat-form-field>
+
+  <mat-form-field>
+      <input matInput type="text" placeholder="FAX">
+  </mat-form-field>
+  <br>
+  <mat-form-field>
+      <input matInput type="text" placeholder="VILLE">
+  </mat-form-field>
+
+  <mat-form-field>
+      <input matInput type="text" placeholder="PROVINCE">
+  </mat-form-field>
+
+  <mat-form-field>
+      <input matInput type="text" placeholder="CODE POSTAL">
+  </mat-form-field>
+</div>
+
+<div id="estimation depenses">
+  <h6>ESTIMATION DES DÉPENSES (EN DOLLARS CANADIENS)</h6>
+  <mat-form-field>
+      <input matInput type="text" placeholder="ADRESSE DE L'EMPLOYÉ ou DU FOURNISSEUR">
+  </mat-form-field>
+
+  <mat-form-field>
+      <input matInput type="text" placeholder="TÉLÉPHONE">
+  </mat-form-field>
+
+  <mat-form-field>
+      <input matInput type="text" placeholder="FAX">
+  </mat-form-field>
+  <br>
+  <mat-form-field>
+      <input matInput type="text" placeholder="VILLE">
+  </mat-form-field>
+
+  <mat-form-field>
+      <input matInput type="text" placeholder="PROVINCE">
+  </mat-form-field>
+
+  <mat-form-field>
+      <input matInput type="text" placeholder="CODE POSTAL">
+  </mat-form-field>
 </div>
 
 <div id="ventilation-budgetaire">
@@ -311,7 +157,6 @@
       <thead>
           <tr>
               <th colspan="3"></th>
-              <th colspan="2">RÉSERVÉ AU SERVICE DES FINANCES</th>
               <th colspan="2"></th>
           </tr>
           <tr>
