--- a/src/app/formulaires/voyage-form/voyage-form.component.css
+++ b/src/app/formulaires/voyage-form/voyage-form.component.css
@@ -100,52 +100,13 @@ mat-form-field {
     padding: 10px 0px 0px 5px;
 }
 
-#ventilation-budgetaire tr:nth-child(2) th {
-    vertical-align: bottom;
-}
-
-#ventilation-budgetaire tbody td:nth-child(4),
-#ventilation-budgetaire tbody td:nth-child(5),
 #ventilation-budgetaire thead,
 #description-facture thead {
     background-color: #CCD4DF;
 }
 
-#description-facture 
-tr td:first-child {
-    width: 20%;
-}
-
-#description-facture tr td:nth-of-type(2) mat-form-field {
-    width: 100%;
-}
-
-#description-facture 
-tr td:nth-of-type(2) {
-    width: 40%;
-}
-
-#description-facture 
-tr td:nth-of-type(3){
-    width: 10%;
-}
-
-#description-facture 
-tr td:last-child {
-    width: 10%;
-}
-
-#description-facture {
-    text-align: center;
-}
-
-input {
-    text-align: center;
-}
-
 #ventilation-budgetaire table {
     /* TODO: change layout (print to pdf) */
-    table-layout: fixed;
     text-align: center;
     border-collapse: collapse;
 }
@@ -156,6 +117,35 @@ input {
 
 #ventilation-budgetaire table mat-form-field{
     width: 90%;
+}
+
+#ventilation-budgetaire
+tr td:first-child {
+    vertical-align: bottom;
+    width: 50%;
+}
+
+#ventilation-budgetaire tr td:nth-of-type(2) mat-form-field {
+    width: 100%;
+}
+
+#ventilation-budgetaire 
+tr td:nth-of-type(2) {
+    width: 10%;
+}
+
+#ventilation-budgetaire 
+tr td:nth-of-type(3){
+    width: 10%;
+}
+
+#ventilation-budgetaire 
+tr td:last-child {
+    width: 40%;
+}
+
+input {
+    text-align: center;
 }
 
 #references {
