--- a/src/app/form/app.af-form.html
+++ b/src/app/form/app.af-form.html
@@ -126,8 +126,8 @@
   <h6>VENTILATION BUDGETAIRE</h6>
   <div class="section">
     <mat-form-field hideRequiredMarker=true floatLabel="always" class="tablestepper">
-    <input [(ngModel)]="displayedRows" matInput placeholder="Lignes:"
-    type="number" step="1">
+    <input [ngModel]="displayedRows" (ngModelChange)="onChangeRows($event)" matInput placeholder="Lignes:"
+    type="number" step="1" min="1" max="30">
     </mat-form-field>
     <table mat-table [dataSource]="ventilation">  
       <ng-container matColumnDef="ubr">
